--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,14 @@
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 .game-board{          
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     }
 
 .row {
@@ -17,4 +24,20 @@
     width: 50px;
     align-items: center; 
     justify-content: center;
+}
+
+.gameState{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1; /* Ensure the overlay is on top */
 }
