--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 5%;
     }
 
 .row {
@@ -29,15 +30,16 @@ body{
 .gameState{
     display: flex;
     flex-direction: column;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
     color: white;
-    display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     z-index: 1; /* Ensure the overlay is on top */
+    
+}
+
+.resetButton{
+    justify-content:flex-end;
+    align-items: center;
 }
